--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -7,7 +7,6 @@
 
     <!-- Bootstrap CSS -->
     <link href="static/bootstrap-5.1.3-dist/css/bootstrap.css" rel="stylesheet">
-
     <link href="static/css/headers.css" rel="stylesheet">
 
     <title>{% block title %} {% endblock %}</title>
@@ -43,7 +42,6 @@
       <div class="container">
         <div class="d-flex flex-wrap align-items-center justify-content-center justify-content-lg-start">
             <ul class="nav col-12 col-lg-auto me-lg-auto mb-2 justify-content-center mb-md-0">
-<!--          <ul class="nav col-12 col-lg-auto my-2 justify-content-center my-md-0 text-small">-->
                 <li>
                   <a href="/" class="nav-link text-white">
                     <svg class="bi d-block mx-auto mb-1" width="24" height="24"><use xlink:href="#home"/></svg>
@@ -51,7 +49,7 @@
                   </a>
                 </li>
                 <li>
-                  <a href="calendar#" class="nav-link text-white">
+                  <a href="calendar" class="nav-link text-white">
                     <svg class="bi d-block mx-auto mb-1" width="24" height="24"><use xlink:href="#table"/></svg>
                     Расписание
                   </a>
