--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -55,7 +55,7 @@
                   </a>
                 </li>
                 <li>
-                  <a href="#" class="nav-link text-secondary">
+                  <a href="competencies" class="nav-link text-secondary">
                     <svg class="bi d-block mx-auto mb-1" width="24" height="24"><use xlink:href="#grid"/></svg>
                     Компетенции
                   </a>
