--- a/app/static/css/headers.css
+++ b/app/static/css/headers.css
@@ -1,15 +1,3 @@
-.form-control-dark {
-  color: #fff;
-  background-color: var(--bs-dark);
-  border-color: var(--bs-gray);
-}
-.form-control-dark:focus {
-  color: #fff;
-  background-color: var(--bs-dark);
-  border-color: #fff;
-  box-shadow: 0 0 0 .25rem rgba(255, 255, 255, .25);
-}
-
 .bi {
   vertical-align: -.125em;
   fill: currentColor;
@@ -17,4 +5,12 @@
 
 .text-small {
   font-size: 85%;
+}
+
+.bd-placeholder-img {
+font-size: 1.125rem;
+text-anchor: middle;
+-webkit-user-select: none;
+-moz-user-select: none;
+user-select: none;
 }
