--- a/app/templates/calendar.html
+++ b/app/templates/calendar.html
@@ -8,7 +8,7 @@
               <select class="form-select" id="department" required>
                 <option value="">Выбрать...</option>
                   {% for department in departments.values() %}
-                  <option>{{department}}</option>
+                  <option>{{form.month}}</option>
                   {% endfor %}
               </select>
 <!--              <div class="invalid-feedback">-->
