--- a/app/templates/calendar.html
+++ b/app/templates/calendar.html
@@ -5,7 +5,7 @@
     <p></p>
 
     <form action="" method="post">
-        {{ form.csrf_token() }}
+<!--        {{ form.csrf_token() }}-->
 
         <div class="container-fluid">
 
@@ -13,10 +13,13 @@
             <div class="col-md-8">
                 <div class="form-label form-label-ld">{{ form.department.label }}</div>
                      {{ form.department (class="form-select form-select-ld") }}
-
-                {{ form.submit (class="btn btn-secondary")}}
             </div>
+          </div>
 
+          <div class="row gy-3">
+              <div class="col-md-3">
+              {{ form.submit (class="btn btn-secondary")}}
+              </div>
           </div>
 
         {% if department %}
@@ -34,12 +37,25 @@
                 {{ form.prepod (class="form-select form-select-ld") }}
             </div>
           </div>
+
+          <div class="row gy-3">
+              <div class="col-md-2">
+              {{ form.get_ical (class="btn btn-secondary")}}
+              </div>
+
+<!--              <div class="col-md-2">-->
+<!--              {{ form.get_xlsx (class="btn btn-secondary")}}-->
+<!--              </div>-->
+<!--          </div>-->
+
         {% else %}
         {% endif %}
 
         </div>
-
-
+{{ department }}
+{{ month }}
+{{ year }}
+{{ prepod }}
 
     </form>
 
