--- a/app/templates/calendar.html
+++ b/app/templates/calendar.html
@@ -46,17 +46,11 @@
 <!--              <div class="col-md-2">-->
 <!--              {{ form.get_xlsx (class="btn btn-secondary")}}-->
 <!--              </div>-->
-<!--          </div>-->
-
+          </div>
         {% else %}
         {% endif %}
-
+    {{ error }}
         </div>
-{{ department }}
-{{ month }}
-{{ year }}
-{{ prepod }}
-
     </form>
 
 {% endblock %}
