--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -1,5 +1,9 @@
 {% extends 'base.html' %}
 
 {% block content %}
-    <h1>{% block title %} Расширения для Апекс-ВУЗ {% endblock %}</h1>
+    <h1 class="display-5">{% block title %} Расширения базовых функций Апекс-ВУЗ{% endblock %}</h1>
+<p class="lead">
+  Дополнительные модули, взаимодействующие с системой при помощи REST API
+</p>
+
 {% endblock %}
