--- a/app/templates/competencies.html
+++ b/app/templates/competencies.html
@@ -1,5 +1,5 @@
 {% extends 'base.html' %}
 
 {% block content %}
-    <h1>{% block title %} Раздел в разработке {% endblock %}</h1>
+    <h1 class="display-5">{% block title %} Компетенции (Раздел в разработке) {% endblock %}</h1>
 {% endblock %}
