--- a/app/templates/calendar.html
+++ b/app/templates/calendar.html
@@ -4,48 +4,54 @@
     <h1>{% block title %} Экспорт расписания {% endblock %}</h1>
     <p></p>
 
-    <form action="" method="post">
-        {{ form.csrf_token() }}
+<form action="" method="post">
+    {{ form.csrf_token() }}
 
-        <div class="container-fluid">
+    <div class="row mb-3 gy-3">
+      <div class="col-md-7">
+        <label class="form-label">{{ form.department.label }}</label>
+        {{ form.department (class="form-select form-select-ld") }}
+      </div>
+      <div>
+        <input type="submit" name="dept_choose" value="Выбор" class="btn btn-secondary">
+      </div>
+    </div>
 
-          <div class="row gy-3">
-            <div class="col-md-8">
-                <div class="form-label form-label-ld">{{ form.department.label }}</div>
-                     {{ form.department (class="form-select form-select-ld") }}
-            </div>
-          </div>
+    {% if department %}
+    <div class="row mb-4 gy-3">
+      <div class="col-md-2">
+        <label class="form-label">{{ form.year.label }}</label>
+        {{ form.year (class="form-select form-select-ld") }}
+      </div>
+      <div class="col-md-2">
+        <label class="form-label">{{ form.month.label }}</label>
+        {{ form.month (class="form-select form-select-ld") }}
+      </div>
+      <div class="col-md-3">
+        <label class="form-label">{{ form.prepod.label }}</label>
+        {{ form.prepod (class="form-select form-select-ld") }}
+      </div>
+    </div>
 
-          <div class="row gy-3">
-              <div class="col-md-3">
-                  <input type="submit" name="dept_choose" value="Выбор" class="btn btn-secondary">
-              </div>
-          </div>
+    <div class="row mb-3 gy-3">
+      <div class="d-grid col-md-7">
+        <input type="submit" name="ical_exp" value="Экспорт в формате iCal" class="btn btn-secondary">
+      </div>
+      <div class="d-grid col-md-7">
+        <input type="submit" name="xlsx_exp" value="Экспорт в формате Excel" class="btn btn-secondary">
+      </div>
+    </div>
+    {% else %}
+    {% endif %}
 
-        {% if department %}
-          <div class="row gy-3">
-            <div class="col-6 col-md-2">
-                <div class="form-label form-label-ld">{{ form.year.label }}</div>
-                {{ form.year (class="form-select form-select-ld") }}
-            </div>
-            <div class="col-6 col-md-2">
-                <div class="form-label form-label-ld">{{ form.month.label }}</div>
-                {{ form.month (class="form-select form-select-ld") }}
-            </div>
-            <div class="col-6 col-md-4">
-                <div class="form-label form-label-ld">{{ form.prepod.label }}</div>
-                {{ form.prepod (class="form-select form-select-ld") }}
-            </div>
-          </div>
-
-<!--            <input type="submit" name="ical_exp" value="Экспорт в формате iCal" class="btn btn-secondary">-->
-            <input type="submit" name="xlsx_exp" value="Экспорт в формате Excel" class="btn btn-secondary">
-
-          </div>
-        {% else %}
-        {% endif %}
-    {{ error }}
+    {% if error %}
+    <div class="row mb-3 gy-3">
+    <div class="d-grid col-md-7">
+        <div class="alert alert-warning" role="alert">
+          {{ error }}
         </div>
-    </form>
+    </div></div>
+    {% endif %}
+</form>
 
 {% endblock %}
