--- a/app/templates/calendar.html
+++ b/app/templates/calendar.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
 
 {% block content %}
-    <h1 class="display-5">{% block title %} Экспорт расписания {% endblock %}</h1>
+    <h1 class="display-5">{% block title %} Расписание {% endblock %}</h1>
     <p></p>
 
 <form action="" method="post">
