--- a/app/static/css/sidebars.css
+++ b/app/static/css/sidebars.css
@@ -51,7 +51,7 @@ main {
 .btn-toggle:hover,
 .btn-toggle:focus {
   color: rgba(0, 0, 0, .85);
-  background-color: #d2f4ea;
+  background-color: #666666;
 }
 
 .btn-toggle::before {
@@ -78,7 +78,7 @@ main {
 }
 .btn-toggle-nav a:hover,
 .btn-toggle-nav a:focus {
-  background-color: #d2f4ea;
+  background-color: #0f6efd;
 }
 
 .scrollarea {
