--- a/app/templates/calendar.html
+++ b/app/templates/calendar.html
@@ -5,7 +5,7 @@
     <p></p>
 
 <form action="" method="post">
-    {{ form.csrf_token() }}
+    {{ form.hidden_tag() }}
 
     <div class="row mb-3 gy-3">
       <div class="col-md-7">
