--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -3,7 +3,7 @@
 {% block content %}
     <h1 class="display-5">{% block title %} Расширения базовых функций Апекс-ВУЗ{% endblock %}</h1>
 <p class="lead">
-  Дополнительные модули, взаимодействующие с системой при помощи REST API
+  Дополнительные модули, взаимодействующие с системой посредством REST API
 </p>
 
 {% endblock %}
