--- a/app/templates/programs.html
+++ b/app/templates/programs.html
@@ -28,14 +28,16 @@
     </div>
     {% endif %}
 </form>
-    <form action="{{ url_for('wp_update') }}" method="POST">
+    {% if edu_spec and edu_plan %}
+
+    <form action="" method="POST">
                 <div class="row mb-2 gy-2">
               <div class="col-md-7">
                 {{ form_upd.date_methodical (placeholder="YYYY-MM-DD")  }}
               <label class="form-label">{{ form_upd.date_methodical.label }}</label>
               </div>
               <div class="col-md-7">
-                {{ form_upd.document_methodical (placeholder="01") }}
+                {{ form_upd.document_methodical (placeholder="1") }}
                 <label class="form-label">{{ form_upd.document_methodical.label }}</label>
               </div>
               <div class="col-md-7">
@@ -43,7 +45,7 @@
                 <label class="form-label">{{ form_upd.date_academic.label }}</label>
               </div>
               <div class="col-md-7">
-                {{ form_upd.document_academic (placeholder="01") }}
+                {{ form_upd.document_academic (placeholder="1") }}
                 <label class="form-label">{{ form_upd.document_academic.label }}</label>
               </div>
               <div class="col-md-7">
@@ -54,5 +56,15 @@
     <input type="hidden" name="btn_identifier" value="wp_update_identifier" />
     <input type="submit" name="wp_update" value="Обновить данные" class="btn btn-secondary">
     </form>
+    {% endif %}
+
+    {% if date_methodical %}
+    <div class="row mb-3 gy-3">
+    <div class="d-grid col-md-7">
+        <div class="alert alert-warning" role="alert">
+          {{ date_methodical }}
+        </div>
+    </div></div>
+    {% endif %}
 
 {% endblock %}
