--- a/app/static/css/sidebars.css
+++ b/app/static/css/sidebars.css
@@ -1,6 +1,7 @@
 body {
   min-height: 100vh;
   min-height: -webkit-fill-available;
+  background-color: #f5f5f5;
 }
 
 html {
@@ -79,6 +80,7 @@ main {
 .btn-toggle-nav a:hover,
 .btn-toggle-nav a:focus {
   background-color: #0f6efd;
+  text-color: #333333;
 }
 
 .scrollarea {
