--- a/app/templates/programs.html
+++ b/app/templates/programs.html
@@ -1,10 +1,10 @@
 {% extends 'base.html' %}
 
 {% block content %}
-    <h1 class="display-5">{% block title %} Информация об утверждении программ {% endblock %}</h1>
+<h1 class="display-5" xmlns="http://www.w3.org/1999/html">{% block title %} Информация об утверждении программ {% endblock %}</h1>
 
 <form action="" method="post">
-    {{ form.csrf_token }}
+    {{ form.hidden_tag() }}
 
     <div class="row mb-3 gy-3">
       <div class="col-md-7">
@@ -44,27 +44,52 @@
                 {{ form.date_academic (placeholder="YYYY-MM-DD")  }}
                 <label class="form-label">{{ form.date_academic.label }}</label>
               </div>
+                  {% for err in form.date_academic.errors %}
+                    <span style="color: #ff4f1f">{{ err }}</span>
+                  {% endfor %}
               <div class="col-md-7">
                 {{ form.document_academic (placeholder="1") }}
                 <label class="form-label">{{ form.document_academic.label }}</label>
               </div>
+                  {% for err in form.document_academic.errors %}
+                    <span style="color: #ff4f1f">{{ err }}</span>
+                  {% endfor %}
               <div class="col-md-7">
                 {{ form.date_approval (placeholder="YYYY-MM-DD") }}
                 <label class="form-label">{{ form.date_approval.label }}</label>
               </div>
+                  {% for err in form.date_approval.errors %}
+                    <span style="color: #ff4f1f">{{ err }}</span>
+                  {% endfor %}
                     </div>
     <input type="hidden" name="btn_identifier" value="wp_update_identifier" />
-    <input type="submit" name="wp_update" value="Обновить данные" class="btn btn-secondary">
+    <input type="submit" name="wp_update" value="Обновить данные" class="btn btn-secondary mb-2">
     </form>
     {% endif %}
 
-    {% if message %}
-    <div class="row mb-3 gy-3">
-    <div class="d-grid col-md-7">
-        <div class="alert alert-warning" role="alert">
-          {{ message }}
+    {% if results %}
+    <div class="row">
+        <div class="d-grid col-md-7">
+            <div class="alert alert-success" role="alert">
+                <p>Обновлены:</p>
+                <p>{% for program in results %}
+                       {{ program }}</br>
+                   {% endfor %}</p>
+            </div>
         </div>
-    </div></div>
+    </div>
+    {% endif %}
+    {% if non_exist %}
+    <div class="row">
+        <div class="d-grid col-md-7">
+            <div class="alert alert-warning" role="alert">
+                <p>Не существуют:</p>
+                <p>{% for program in non_exist %}
+                       {{ non_exist[program][0] }} {{ non_exist[program][1] }}</br>
+                   {% endfor %}</p>
+            </div>
+        </div>
+    </div>
     {% endif %}
 
 {% endblock %}
