--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -7,7 +7,7 @@
     <meta name="description" content="Apeks-VUZ extensions">
 
     <!-- Bootstrap CSS -->
-    <link href="static/bootstrap-5.1.3-dist/css/bootstrap.min.css" rel="stylesheet">
+    <link href="static/bootstrap5/css/bootstrap.min.css" rel="stylesheet">
     <link href="static/css/sidebars.css" rel="stylesheet">
 
     <!-- Favicons -->
@@ -137,7 +137,7 @@
 </main>
 
     <!-- Optional JavaScript -->
-    <script src="static/bootstrap-5.1.3-dist/js/bootstrap.bundle.min.js"></script>
+    <script src="static/bootstrap5/js/bootstrap.bundle.min.js"></script>
 <!--    <script src="sidebars.js"></script>-->
   </body>
 </html>
