--- a/app/templates/programs.html
+++ b/app/templates/programs.html
@@ -3,7 +3,7 @@
 {% block content %}
 <h1 class="display-5" xmlns="http://www.w3.org/1999/html">{% block title %} Информация об утверждении программ {% endblock %}</h1>
 
-<form action="" method="post">
+<form action="" method="post" novalidate>
     {{ form.hidden_tag() }}
 
     <div class="row mb-3 gy-3">
@@ -20,14 +20,12 @@
         <div class="row mb-3 gy-3">
       <div class="col-md-7">
         <label class="form-label">{{ form.edu_plan.label }}</label>
-        {{ form.edu_plan (class="form-select form-select-ld") }}
+        {{ form.edu_plan(class="form-select form-select-ld") }}
       </div>
-
     </div>
-
                 <div class="row mb-2 gy-2">
               <div class="col-md-7">
-                {{ form.date_methodical (placeholder="YYYY-MM-DD")  }}
+                {{ form.date_methodical (placeholder="ГГГГ-ММ-ДД") }}
               <label class="form-label">{{ form.date_methodical.label }}</label>
               </div>
                   {% for err in form.date_methodical.errors %}
@@ -41,7 +39,7 @@
                     <span style="color: #ff4f1f">{{ err }}</span>
                   {% endfor %}
               <div class="col-md-7">
-                {{ form.date_academic (placeholder="YYYY-MM-DD")  }}
+                {{ form.date_academic (placeholder="ГГГГ-ММ-ДД")  }}
                 <label class="form-label">{{ form.date_academic.label }}</label>
               </div>
                   {% for err in form.date_academic.errors %}
@@ -55,18 +53,18 @@
                     <span style="color: #ff4f1f">{{ err }}</span>
                   {% endfor %}
               <div class="col-md-7">
-                {{ form.date_approval (placeholder="YYYY-MM-DD") }}
+                {{ form.date_approval (placeholder="ГГГГ-ММ-ДД") }}
                 <label class="form-label">{{ form.date_approval.label }}</label>
               </div>
                   {% for err in form.date_approval.errors %}
                     <span style="color: #ff4f1f">{{ err }}</span>
                   {% endfor %}
                     </div>
-    <input type="hidden" name="btn_identifier" value="wp_update_identifier" />
-    <input type="submit" name="wp_update" value="Обновить данные" class="btn btn-secondary mb-2">
-    </form>
-    {% endif %}
+    {{ form.wp_update (class="btn btn-secondary mb-2") }}
 
+<!--    <input type="submit" name="wp_update" value="Обновить данные" class="btn btn-secondary mb-2">-->
+    {% endif %}
+</form>
     {% if results %}
     <div class="row">
         <div class="d-grid col-md-7">
@@ -91,5 +89,4 @@
         </div>
     </div>
     {% endif %}
-
 {% endblock %}
