--- a/app/templates/auth/login.html
+++ b/app/templates/auth/login.html
@@ -4,18 +4,18 @@
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="Apeks-VUZ extensions">
+    <meta name="description" content="Расширения Апекс-ВУЗ">
 
     <!-- Bootstrap CSS -->
-    <link href="static/bootstrap-5.1.3-dist/css/bootstrap.min.css" rel="stylesheet">
+    <link href="{{url_for('static', filename='bootstrap5/css/bootstrap.min.css')}}" rel="stylesheet">
     <!-- Custom styles for this template -->
-    <link href="static/css/login.css" rel="stylesheet">
+    <link href="{{url_for('static', filename='css/login.css')}}" rel="stylesheet">
 
     <!-- Favicons -->
-    <link rel="apple-touch-icon" sizes="180x180" href="../static/favicons/apple-touch-icon.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="../static/favicons/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="../static/favicons/favicon-16x16.png">
-    <link rel="manifest" href="../static/favicons/site.webmanifest">
+    <link rel="apple-touch-icon" sizes="180x180" href="{{url_for('static', filename='favicons/apple-touch-icon.png')}}">
+    <link rel="icon" type="image/png" sizes="32x32" href="{{url_for('static', filename='favicons/favicon-32x32.png')}}">
+    <link rel="icon" type="image/png" sizes="16x16" href="{{url_for('static', filename='favicons/favicon-16x16.png')}}">
+    <link rel="manifest" href="{{url_for('static', filename='favicons/site.webmanifest')}}">
   </head>
 
 <body class="text-center">
@@ -58,6 +58,6 @@
    </div>
 </main>
 
-    <script src="static/bootstrap-5.1.3-dist/js/bootstrap.bundle.min.js"></script>
+    <script src="{{url_for('static', filename='bootstrap5/js/bootstrap.bundle.min.js')}}"></script>
   </body>
 </html>
