--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -104,8 +104,8 @@
       </li>
          {% if active == "programs" %}
              <ul class="btn-toggle-nav list-unstyled fw-normal pb-1 small">
-                     <li><a href="{{ url_for('programs.dates_update') }}" class="text-white rounded">Обновление дат</a></li>
-<!--                 <li><a href="#" class="text-white rounded">Загрузка индикаторов</a></li>-->
+                 <li><a href="{{ url_for('programs.dates_update') }}" class="text-white rounded">Обновление дат</a></li>
+                 <li><a href="{{ url_for('programs.choose_plan') }}" class="text-white rounded">Значения полей</a></li>
              </ul>
          {% endif %}
 
