--- a/app/templates/programs/fields_data.html
+++ b/app/templates/programs/fields_data.html
@@ -9,7 +9,7 @@
     {{ form.hidden_tag() }}
 
     <div class="row mb-3 gy-3">
-      <div class="col-md-7">
+      <div class="col-xl-8">
         <label class="form-label">{{ form.wp_fields.label }}</label>
         {{ form.wp_fields(class="form-select form-select-ld") }}
       </div>
