--- a/app/templates/plans/competencies_load.html
+++ b/app/templates/plans/competencies_load.html
@@ -9,7 +9,7 @@
     {{ form.hidden_tag() }}
 
     <div class="row mb-3 gy-3">
-      <div class="col-md-7">
+      <div class="col-xl-8">
         <label class="form-label">{{ form.edu_spec.label }}</label>
         {{ form.edu_spec (class="form-select form-select-ld") }}
       </div>
@@ -20,7 +20,7 @@
 
     {% if edu_spec %}
         <div class="row mb-3 gy-3">
-      <div class="col-md-7">
+      <div class="col-xl-8">
         <label class="form-label">{{ form.edu_plan.label }}</label>
         {{ form.edu_plan (class="form-select form-select-ld") }}
       </div>
@@ -32,23 +32,23 @@
     {% if edu_plan %}
 
     <div class="row mb-3 gy-3">
-        <div class="d-grid col-md-7">
-            <input type="submit" name="comp_delete" value="Удаление компетенций из плана" class="btn btn-secondary">
+        <div class="d-grid col-xl-8">
+            <input type="submit" name="comp_delete" value="Удаление компетенций из плана" class="btn btn-danger">
         </div>
 
         <form enctype=multipart/form-data class="d-grid col-md-7">
-            <div class="mb-3 col-md-7">
+            <div class="mb-3 col-xl-8">
                 <label for="formFile" class="form-label">Выберите файл для загрузки</label>
                 <input class="form-control" type="file" id="formFile">
             </div>
         </form>
 
-        <div class="d-grid col-md-7">
+        <div class="d-grid col-xl-8">
             <input type="submit" name="comp_check" value="Проверка файла" class="btn btn-secondary">
         </div>
 
-        <div class="d-grid col-md-7">
-            <input type="submit" name="comp_load" value="Загрузка компетенций из файла" class="btn btn-secondary">
+        <div class="d-grid col-xl-8">
+            <input type="submit" name="comp_load" value="Загрузка компетенций из файла" class="btn btn-success">
         </div>
     </div>
 
