--- a/app/templates/programs/dates_update.html
+++ b/app/templates/programs/dates_update.html
@@ -8,7 +8,7 @@
     {{ form.hidden_tag() }}
 
     <div class="row mb-3 gy-3">
-      <div class="col-md-7">
+      <div class="col-xl-8">
         <label class="form-label">{{ form.edu_spec.label }}</label>
         {{ form.edu_spec (class="form-select form-select-ld") }}
       </div>
@@ -19,7 +19,7 @@
 
     {% if edu_spec %}
         <div class="row mb-3 gy-3">
-      <div class="col-md-7">
+      <div class="col-xl-8">
         <label class="form-label">{{ form.edu_plan.label }}</label>
         {{ form.edu_plan(class="form-select form-select-ld") }}
       </div>
