--- a/app/templates/schedule/schedule.html
+++ b/app/templates/schedule/schedule.html
@@ -8,7 +8,7 @@
     {{ form.hidden_tag() }}
 
     <div class="row mb-3 gy-3">
-      <div class="col-md-7">
+      <div class="col-xl-8">
         <label class="form-label">{{ form.department.label }}</label>
         {{ form.department (class="form-select form-select-ld") }}
       </div>
@@ -19,25 +19,25 @@
 
     {% if department %}
     <div class="row mb-4 gy-3">
-      <div class="col-md-2">
+      <div class="col-xl-2">
         <label class="form-label">{{ form.year.label }}</label>
         {{ form.year(class="form-select form-select-ld") }}
       </div>
-      <div class="col-md-2">
+      <div class="col-xl-2">
         <label class="form-label">{{ form.month.label }}</label>
         {{ form.month(class="form-select form-select-ld") }}
       </div>
-      <div class="col-md-3">
+      <div class="col-xl-4">
         <label class="form-label">{{ form.prepod.label }}</label>
         {{ form.prepod (class="form-select form-select-ld") }}
       </div>
     </div>
 
     <div class="row mb-3 gy-3">
-      <div class="d-grid col-md-7">
+      <div class="d-grid col-xl-8">
         <input type="submit" name="ical_exp" value="Экспорт в формате iCal" class="btn btn-secondary">
       </div>
-      <div class="d-grid col-md-7">
+      <div class="d-grid col-xl-8">
         <input type="submit" name="xlsx_exp" value="Экспорт в формате Excel" class="btn btn-secondary">
       </div>
     </div>
